k8s/tenant-portal/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenant-portal
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tenant-portal
  ports:
    - port: 80
      targetPort: 80
